LIBDRUM-131. merge local jspui customizations
1. Merged dspace-jspui/dspace-jspui-api to /dspace-jspui/src including edu.umd.lib classes
2. Moved dspace-jspui/dspace-jspui-webapp -> dspace/modules/jspui/src/main/webapp/ (local customization module)

https://issues.umd.edu/browse/LIBDRUM-131